--- a/.setup/values-template.j2
+++ b/.setup/values-template.j2
@@ -1,6 +1,6 @@
 jaeger:
   # Specifies whether Jaeger instance should be created
-  create: false
+  create: true
   # namespace where Jaeger resource should be created default to .Release.Namespace
   namespace: monitoring
   spec: 
