--- a/.setup/values-template.j2
+++ b/.setup/values-template.j2
@@ -20,6 +20,11 @@ jaeger:
       options:
         query:
           base-path: /jaeger
+    
+    storage:
+			options:
+				memory:
+					max-traces: 100000
 
 rbac:
   # Specifies whether RBAC resources should be created
